# SportiqUserService

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
app/: __main__.py
app/config/: __init__.py  jwt_settings.py  settings.py
app/db/cache/: __init__.py  redis.py
app/db/connection/: __init__.py  session.py
app/db/migrator/: env.py
app/db/migrator/versions/: 2023_04_16_2216-e5a927bdb33c_.py  2023_04_19_1813-b83c7df548a0_.py
app/db/models/: base.py  user.py
app/db/storage/: __init__.py  redis.py
app/endpoints/: __init__.py
app/endpoints/auth/: __init__.py  login.py  logout.py  signup.py  token.py
app/endpoints/user/: __init__.py  delete.py  info.py
app/exceptions/: __init__.py  auth.py  db.py  token.py  user.py
app/schema/: __init__.py  login.py  signup.py  token.py  user.py
app/tools/: __init__.py  blacklist.py  secret_key.py  token_url.py
app/usecase/: __init__.py  token.py  user.py
app/usecase/token/: __init__.py  crypt.py  handle.py
deployments/: docker-compose.yaml
docs/: index.html  swagger.json
misc/: crontab.txt
